# project_euler_c

./: CMakeLists.txt  README.md  main.c  solutions.c  solutions.h  solve  test
digits/: CMakeLists.txt  palindromes.c
digits/include/: digits.h  palindromes.h
digits/tests/: digits_tests.c
grids/: CMakeLists.txt  path_count.c
grids/include/: grid.h  path_count.h
grids/tests/: grids_tests.c
include/: answers.h  return_types.h  run_solver.h  solvers.h
include/util/digits/: palindromes.h
include/util/primes/: sieve_of_eratosthenes.h
multiples/: CMakeLists.txt  factors.c
multiples/include/: factors.h
multiples/tests/: multiples_tests.c
primes/: CMakeLists.txt  prime_factors.c  sieve_of_eratosthenes.c
primes/include/: prime_factors.h  sieve_of_eratosthenes.h
primes/tests/: primes_tests.c
project_euler_c/: CMakeLists.txt  answers.c  main.c  run_solver.c
project_euler_c/include/: answers.h  run_solver.h
solvers/: CMakeLists.txt  s0001.c  s0002.c  s0003.c  s0004.c  s0005.c  s0006.c  s0007.c  s0008.c  s0009.c  s0010.c  s0011.c  s0012.c  s0013.c  s0014.c  s0015.c  s0016.c  s0017.c  solvers.c
solvers/include/: solvers.h
src/: answers.c  main.c  run_solver.c
src/solvers/: s0001.c  s0002.c  s0003.c  s0004.c  s0007.c
src/util/primes/: prime_factors.c  sieve_of_eratosthenes.c
