add_library(
    solvers
    s0001.c
    s0002.c
    s0003.c
    s0004.c
    s0005.c
    s0006.c
    s0007.c
    s0008.c
    s0009.c
    s0010.c
    s0011.c
    s0012.c
    s0013.c
    solvers.c
)
add_dependencies(
    solvers
    libgmp
)
ExternalProject_Get_Property(libgmp INSTALL_DIR)
target_include_directories(
    solvers
    PUBLIC
    include
    PRIVATE
    ${INSTALL_DIR}/include
)
target_link_libraries(
    solvers
    PRIVATE
    digits
    multiples
    primes
    # TODO: currently this hardcoded library extention is a barrier to cross-platform builds
    ${INSTALL_DIR}/lib/libgmp.a
)
target_compile_features(solvers PUBLIC c_std_17)
